--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "json-server": "json-server --watch db.json --port 5000",
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "start": "concurrently \"npm run dev\" \"npm run json-server\"",
+    "build": "next build"
   },
   "dependencies": {
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.2.1",
-    "@material-ui/styles": "^4.10.0",
     "@material-ui/lab": "^4.0.0-alpha.53",
+    "@material-ui/styles": "^4.10.0",
     "axios": "0.19.2",
     "bcrypt": "^4.0.1",
     "chart.js": "^2.9.3",
@@ -24,12 +25,17 @@
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
+    "react-bootstrap-sweetalert": "^5.1.11",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "16.13.1",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "recompose": "^0.30.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "sqlite": "4.0.8",
     "sqlite3": "4.2.0",
     "swr": "0.2.1",
@@ -38,8 +44,13 @@
     "validate.js": "^0.13.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "14.0.5",
     "@types/react": "16.9.35",
+    "concurrently": "^5.2.0",
+    "json-server": "^0.16.1",
     "typescript": "3.9.3"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
