--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^4.0.1",
     "chart.js": "^2.9.3",
     "clsx": "^1.1.1",
+    "dotenv": "^8.2.0",
     "formik": "2.1.4",
     "history": "^4.10.1",
     "jsonwebtoken": "^8.5.1",
@@ -34,8 +35,14 @@
     "react-scripts": "^3.4.1",
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.4",
+    "redux-persist": "^6.0.0",
+    "redux-persist-transform-encrypt": "^2.0.1",
+    "redux-persist-transform-filter": "0.0.20",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.26.8",
     "sqlite": "4.0.8",
     "sqlite3": "4.2.0",
     "swr": "0.2.1",
@@ -47,9 +54,15 @@
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "14.0.5",
+    "@types/node-sass": "^4.11.1",
     "@types/react": "16.9.35",
+    "@types/react-redux": "^7.1.9",
+    "@types/redux-mock-store": "^1.0.2",
+    "@types/redux-persist-transform-encrypt": "^2.0.1",
+    "@types/redux-persist-transform-filter": "0.0.4",
     "concurrently": "^5.2.0",
     "json-server": "^0.16.1",
+    "redux-devtools-extension": "^2.13.8",
     "typescript": "3.9.3"
   },
   "proxy": "http://localhost:5000"
