--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.26.0",
     "next": "9.4.2",
+    "next-redux-wrapper": "^6.0.2",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
@@ -64,6 +65,5 @@
     "json-server": "^0.16.1",
     "redux-devtools-extension": "^2.13.8",
     "typescript": "3.9.3"
-  },
-  "proxy": "http://localhost:5000"
+  }
 }
