--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "build": "next build"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
+    "@date-io/moment": "^2.6.0",
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/lab": "^4.0.0-alpha.53",
+    "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.10.0",
     "axios": "0.19.2",
     "bcrypt": "^4.0.1",
