--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "history": "^4.10.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.26.0",
+    "mui-datatables": "^3.0.1",
     "next": "9.4.2",
     "next-redux-wrapper": "^6.0.2",
     "node-sass": "^4.14.1",
