--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "cartrader-clone",
+  "name": "pmf-tapera",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "json-server": "json-server --watch db.json --port 5000",
+    "json-server": "json-server --watch db.json --port 3001",
     "dev": "next dev",
     "start": "concurrently \"npm run dev\" \"npm run json-server\"",
     "build": "next build"
@@ -65,9 +65,21 @@
     "@types/redux-mock-store": "^1.0.2",
     "@types/redux-persist-transform-encrypt": "^2.0.1",
     "@types/redux-persist-transform-filter": "0.0.4",
+    "babel-jest": "^26.0.1",
     "concurrently": "^5.2.0",
+    "eslint": "^7.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-react": "^7.20.0",
+    "husky": "^4.2.5",
+    "jest": "^26.0.1",
+    "jest-watch-typeahead": "^0.6.0",
     "json-server": "^0.16.1",
+    "lint-staged": "^10.2.10",
+    "prettier": "^2.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "rimraf": "^3.0.2",
+    "shx": "^0.3.2",
     "typescript": "3.9.3"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
