Add input masking to integer inut

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-bootstrap-sweetalert": "^5.1.11",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "16.13.1",
+    "react-input-mask": "^2.0.4",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
