--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/redux-mock-store": "^1.0.2",
     "@types/redux-persist-transform-encrypt": "^2.0.1",
     "@types/redux-persist-transform-filter": "0.0.4",
+    "@types/styled-components": "^5.1.0",
     "babel-jest": "^26.0.1",
     "concurrently": "^5.2.0",
     "eslint": "^7.2.0",
