--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "json-server": "json-server --watch db.json --port 3001",
     "dev": "next dev",
     "start": "concurrently \"npm run dev\" \"npm run json-server\"",
-    "build": "next build"
+    "build": "next build",
+    "test": "jest"
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
@@ -21,7 +22,6 @@
     "chart.js": "^2.9.3",
     "clsx": "^1.1.1",
     "dotenv": "^8.2.0",
-    "formik": "2.1.4",
     "history": "^4.10.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.26.0",
@@ -49,14 +49,13 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "sass": "^1.26.8",
-    "sqlite": "4.0.8",
-    "sqlite3": "4.2.0",
     "swr": "0.2.1",
     "underscore": "^1.10.2",
     "uuid": "^8.1.0",
     "validate.js": "^0.13.1"
   },
   "devDependencies": {
+    "@testing-library/react": "^10.0.1",
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "14.0.5",
@@ -67,6 +66,7 @@
     "@types/redux-persist-transform-encrypt": "^2.0.1",
     "@types/redux-persist-transform-filter": "0.0.4",
     "@types/styled-components": "^5.1.0",
+    "@types/testing-library__react": "^10.0.0",
     "babel-jest": "^26.0.1",
     "concurrently": "^5.2.0",
     "eslint": "^7.2.0",
@@ -74,6 +74,7 @@
     "eslint-plugin-react": "^7.20.0",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
+    "jest-canvas-mock": "^2.2.0",
     "jest-watch-typeahead": "^0.6.0",
     "json-server": "^0.16.1",
     "lint-staged": "^10.2.10",
@@ -82,6 +83,11 @@
     "rimraf": "^3.0.2",
     "shx": "^0.3.2",
     "typescript": "3.9.3"
+  },
+  "jest": {
+    "setupFiles": [
+      "jest-canvas-mock"
+    ]
   },
   "proxy": "http://localhost:3001"
 }
